@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.28 ===
+* Added MacOS dependencies.
 * Updated build scripts.
 
 === 1.0.27 ===
